--- a/styles/global.css
+++ b/styles/global.css
@@ -2,3 +2,19 @@ html {
   scroll-behavior: smooth;
   scroll-padding-top: 7rem;
 }
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+}
