smaller splash image for mobile, removes scrollbars entirely

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,12 @@
-html {
+html,
+html * {
   scroll-behavior: smooth;
   scroll-padding-top: 7rem;
+  scrollbar-width: none !important;
+}
+
+html *::-webkit-scrollbar {
+  display: none;
 }
 
 @keyframes bounce {
